# api_series

./: .env.example  .gitignore  main.py__old  pyproject.toml  tests.http
app/: database.py
app/model/: serie.py
app/route/: serie.py
app/schema/: serie.py
